# otus-cpp-basics

./: .gitignore  CMakeLists.txt  README.md  move_me_out.cpp  move_me_out.h  test1.txt
